--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.2",
     "fast-xml-parser": "^5.2.5",
     "joi": "^18.0.1",
+    "mongodb-memory-server": "^10.2.2",
     "mongoose": "^8.19.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
